Work around for issue 338 to make j1 demo working with Microsoft endpoints.
svn path=/trunk/; revision=1651


Former-commit-id: adc17b24e8b40638eba81ea4ca44a4dd7019ec0f